Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextNumber.quorum
class Main
    action Main
        text v = Test()
    end

    action Test() returns text
        number var = 5.0
        return var
    end
end